force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__AverageMeanOpinionScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageMeanOpinionScoreNumber__c</fullName>
    <label>Average Mean Opinion Score (MOS)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageMeanOpinionScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>