force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__AveragePacketLossNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AveragePacketLossNumber__c</fullName>
    <label>Average Packet Loss (%)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AveragePacketLossNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>