force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__AverageResponseTimeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageResponseTimeNumber__c</fullName>
    <label>Average Response Time (ms)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageResponseTimeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>