force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__AverageThroughputDownloadNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageThroughputDownloadNumber__c</fullName>
    <label>Average Throughput Download (bps)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageThroughputDownloadNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>