force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__DestinationAddress__c.field-meta.xml
<CustomField>
    <fullName>ssot__DestinationAddress__c</fullName>
    <label>Destination Address</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DestinationAddress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>