force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__NetworkActivityType__c.field-meta.xml
<CustomField>
    <fullName>ssot__NetworkActivityType__c</fullName>
    <label>Network Activity Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NetworkActivityType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>