force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__NetworkLocationName__c.field-meta.xml
<CustomField>
    <fullName>ssot__NetworkLocationName__c</fullName>
    <label>Network Location</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NetworkLocationName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>