force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__NetworkUsageEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__NetworkUsageEndDateTime__c</fullName>
    <label>Network Usage End Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NetworkUsageEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>