force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__NetworkUsageStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__NetworkUsageStartDateTime__c</fullName>
    <label>Network Usage Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NetworkUsageStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>