force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__ProtocolName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProtocolName__c</fullName>
    <label>Protocol</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProtocolName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>