force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__rel_1720283032059_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720283032059_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetworkUsage_UsageVolumeUOMId_map_Un_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>NetworkUsage_UsageVolumeUOMId_map_Un_rel</relationshipLabel>
    <relationshipName>rel_1720283032059_end</relationshipName>
    <type>Lookup</type>
</CustomField>