force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__rel_1720291043350_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291043350_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetworkUsage_AccountId_map_Account_I_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>NetworkUsage_AccountId_map_Account_I_rel</relationshipLabel>
    <relationshipName>rel_1720291043350_end</relationshipName>
    <type>Lookup</type>
</CustomField>