force-app/main/default/objects/ssot__NetworkUsage__dlm/fields/ssot__UsageVolumeUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__UsageVolumeUOMId__c</fullName>
    <label>Usage Volume Unit Of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UsageVolumeUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>